# storitad

./: .gitignore  .gitmodules  README.md  flake.nix  ingest-spec.org  keystore.properties.example  settings.gradle.kts  storitad-spec.org
.github/workflows/: release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: recipients.json
app/src/main/cpp/: CMakeLists.txt  storitad_whisper.cpp
app/src/main/java/uk/storitad/capture/: MainActivity.kt
app/src/main/java/uk/storitad/capture/capture/: AudioPlayer.kt  AudioRecorder.kt  CaptureState.kt  RecordingService.kt  VideoRecorder.kt  VideoRecorderHelpers.kt
app/src/main/java/uk/storitad/capture/location/: LocationProvider.kt
app/src/main/java/uk/storitad/capture/metadata/: EntryMetadata.kt  MetadataRepository.kt  (+4 more)
app/src/main/res/drawable/: ic_notification.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: shortcuts.xml
docs/: architecture.md  browser.md  ingest.md  installation.md  phone-app.md  server.md  specs.md  troubleshooting.md  whisper.md
docs/superpowers/specs/: 2026-04-16-reminders-design.org
gradle/: libs.versions.toml
ingest/: aliases.example.yml  config.example.yml  pyproject.toml
ingest/storitad_ingest/: aliases.py  cli.py  normalise.py  pull.py  render_markdown.py  render_site.py  serve.py  sidecar.py  transcribe.py
ingest/storitad_ingest/templates/: entry.html.j2  index.html.j2  search.js  stats.html.j2  style.css
ingest/tests/: test_pipeline.py
(+35 files in other folders)
